--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <body>
     <header id="header"></header>
     <main>
-      <div id="form-container">
+      <div id="form_container">
         <label for="task">Insert a new task</label>
         <br />
         <input type="text" id="task" />
-        <button id="submit-task" name="add-item-button">Add</button>
-        <button id="edit-task" name="edit-item-button" class="invisible">
+        <button id="submit_task" name="add_item_button">Add</button>
+        <button id="edit_task" name="edit_item_button" class="invisible">
           Edit
         </button>
       </div>
