multi delete function

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         </button>
       </div>
       <div>
-        <h2>Errand List</h2>
+        <div class="task_list_top_part">
+          <h2>Errand List</h2>
+          <i class="fas fa-trash invisible" id="task_multi_selector"></i>
+        </div>
         <ul id="tasks"></ul>
       </div>
     </main>
