--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <div>
         <div class="task_list_top_part">
           <h2>Errand List</h2>
+          <i class="fas fa-trash red-bucket" id="delete_all_tasks"></i>
           <i class="fas fa-trash invisible" id="task_multi_selector"></i>
         </div>
         <ul id="tasks"></ul>
