--- a/index.html
+++ b/index.html
@@ -40,24 +40,29 @@
         <label for="task">Insert a new task</label>
         <br />
         <div class="prio_container">
-          <label for="priority">priority</label>
+          <label for="low-priority">priority</label>
           <input
             type="radio"
             value="low"
             name="priority"
             class="low_prio prio"
+            id="low_prio"
           />
+          <label for="mid_prio"></label>
           <input
             type="radio"
             value="mid"
             name="priority"
             class="mid_prio prio"
+            id="mid_prio"
           />
+          <label for="high_prio"></label>
           <input
             type="radio"
             value="high"
             name="priority"
             class="high_prio prio"
+            id="high_prio"
           />
         </div>
         <input type="text" id="task" />
@@ -75,7 +80,12 @@
         </div>
         <ul id="tasks"></ul>
       </div>
-      <button id="theme_toggle" onclick="toggle_dark_light_theme()">
+      <button
+        name="theme_toggle"
+        aria-label="theme_toggle"
+        id="theme_toggle"
+        onclick="toggle_dark_light_theme()"
+      >
         <div class="theme_toggle_bubble"></div>
       </button>
     </main>
