--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </button>
         <p class="message"></p>
       </div>
-      <div class="inner_task_holder">
+      <div id="inner_task_holder">
         <div class="task_list_top_part">
           <h2>Errand List</h2>
           <i class="fas fa-trash red-bucket" id="delete_all_tasks"></i>
