total tasks counter

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div id="inner_task_holder">
         <div class="task_list_top_part">
-          <h2>Errand List</h2>
+          <h2 class="errand_header">Errand List</h2>
           <i class="fas fa-trash red-bucket" id="delete_all_tasks"></i>
           <i class="fas fa-trash invisible" id="task_multi_selector"></i>
         </div>
