--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <label for="task">Insert a new task</label>
         <br />
         <div class="prio_container">
-          <label for="low-priority">priority</label>
+          <label for="low_prio">priority</label>
           <input
             type="radio"
             value="low"
